# castor

./: .beans.yml  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  FUZZING_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v0.6.0.md  MINDMAP.md  NOTES.md  PROPERTY_TESTING_PLAN.md  README.md  README.mise.md  TESTING.md  TODO.md  docker-compose.yaml  justfile  mise.toml  pyproject.toml  stderr.txt  stdout.txt
.beans/: casq-3d8o--tests-revisited.md  casq-3jya--create-error-message-quality-tests.md  casq-54by--add-casq-references-query-command-with-regex-filte.md  casq-5jen--fix-stdout-pollution-no-orphaned-objects-message-t.md  casq-70j4--implement-fuzzing-for-parser-hardening.md  casq-7ov8--fix-stdout-pollution-no-journal-entries-messages-t.md  casq-bfvt--optimize-chunking-fastcdc-v2020-smaller-chunks.md  casq-bm2s--implement-file-permission-restoration-in-materiali.md  casq-bulz--remove-support-for-v1-format.md  casq-ce4v--add-ci-workflow-for-ux-tests.md  casq-dp35--fix-stdout-pollution-no-references-messages-to-std.md  casq-e2zz--create-rust-cli-integration-tests.md  casq-em53--create-error-message-quality-guidelines.md  casq-esy3--create-comprehensive-ux-testing-guide.md  casq-fca8--clean-up-outdated-todomd-file.md  casq-fgc7--fix-stdoutstderr-test-expectations.md  casq-gp9n--create-output-format-snapshot-tests.md  casq-jvlk--convert-justfile-tasks-to-mise-tasks.md  casq-leyo--casq-list-reference-ref.md  casq-mqzz--create-json-schema-validation-infrastructure.md  casq-r6oy--conduct-first-time-user-experience-ftux-sessions.md  casq-rh4j--implement-property-based-testing-suite.md  casq-stnu--docscli-expand-commands-and-examples-json.md  casq-u0zy--docscore-api-reference-and-module-map-json.md  casq-uko9--fix-cli-stdoutstderr-separation.md  casq-uohr--fix-casq-list-documentation-bug.md  casq-vepb--create-cross-platform-compatibility-tests.md  casq-x35y--fix-stdout-pollution-success-confirmation-messages.md  casq-yuj3--docstop-level-improve-quickstart-and-examples-json.md  casq-zqis--create-documentation-accuracy-validation-tests.md
.claude/: .#settings.local.json  settings.local.json
.github/workflows/: main.yml  rust.yml
.mise/tasks/: generatedocs
.serena/: project.yml
.serena/memories/: stdout-stderr-rules.md
casq/: CLI.md  Cargo.toml  README.md
casq-test/: README.md  conftest.py  justfile  main.py  pyproject.toml  pytest.ini
casq-test/fixtures/: sample_files.py
casq-test/helpers/: __init__.py  cli.py  verification.py
casq-test/tests/: __init__.py  test_add.py  test_cat.py  test_compression_chunking.py  test_deduplication.py  test_edge_cases.py  test_gc.py  test_hash_stability.py  test_init.py  test_integration.py  test_json_output.py  test_ls.py  test_materialize.py  test_orphans.py  test_put.py  test_refs.py  test_stat.py  test_stdin.py
casq/src/: main.rs  output.rs
casq_core/: Cargo.toml  LICENSE  README.md
casq_core/proptest-regressions/: tree.txt
casq_core/src/: chunking.rs  error.rs  gc.rs  hash.rs  journal.rs  lib.rs  object.rs  refs.rs  store.rs  tree.rs  walk.rs
castor/: Cargo.toml  README.md
castor-test/: README.md  conftest.py  justfile  main.py  pyproject.toml
castor-test/fixtures/: sample_files.py
castor-test/helpers/: __init__.py  cli.py  verification.py
castor-test/tests/: __init__.py  test_add.py  test_cat.py  test_deduplication.py  test_edge_cases.py  test_gc.py  test_hash_stability.py  test_init.py  test_integration.py  test_ls.py  (+3 more)
castor/src/: main.rs
castor_core/: Cargo.toml  README.md
castor_core/src/: error.rs  hash.rs  lib.rs  object.rs  refs.rs  store.rs  tree.rs
tests/: README.md  __init__.py  conftest.py  helpers.py  pytest.ini  test_chunking_deduplication.py  test_errors.py  test_gc_orphans.py  test_help.py  test_initialize.py  test_metadata.py  test_put_list_get.py  test_references.py
