[workspace]
members = ["casq_core", "casq"]
resolver = "2"

[workspace.package]
version = "0.9.0"
authors = ["Björn Roberg <bjorn.roberg@gmail.com>"]
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/roobie/casq"
keywords = ["storage", "content-addressable", "file-system-tool", "backup"]

[workspace.dependencies]
casq_core = { version = "0.9.0", path = "casq_core" }
