[package]
name = "casq"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
casq_core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0" # Error handling in main
chrono = { version = "0.4", features = ["serde"] }