[package]
name = "casq"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A minimal content-addressed file store using BLAKE3. (CLI)"
repository.workspace = true
keywords.workspace = true
license = "Apache-2.0"
readme = "README.md"

[dependencies]
casq_core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0" # Error handling in main
chrono = { version = "0.4", features = ["serde"] }
atty = "0.2" # TTY detection for stdin validation
