[package]
name = "casq_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A minimal content-addressed file store using BLAKE3. (library)"
repository.workspace = true
keywords.workspace = true
license = "Apache-2.0"
readme = "README.md"

[dependencies]
blake3 = "1.5"                        # BLAKE3 hashing
hex = "0.4"                           # Hash hex encoding/decoding
tempfile = "3.0"                      # Atomic object writes
ignore = "0.4"                        # Filesystem walking with .gitignore support
thiserror = "2.0"                     # Error handling
zstd = "0.13"                         # Compression
fastcdc = "3.1"                       # Content-defined chunking
