[package]
name = "castor"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
castor_core = { path = "../castor_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0" # Error handling in main
chrono = { version = "0.4", features = ["serde"] }